fixed the table data overflow issue

--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
     font-family: 'Exo 2', sans-serif;
 }
 body {
-    background-color: whitesmoke; 
+    background-color: whitesmoke;
 }
 h1 {
     font-family: 'Kaushan Script', sans-serif;
     text-align: center;
 }
 #mainwrapper {
-    margin-top: 0px;
+    width: 90%;
+    margin: auto;
     border-radius: 5px;
     padding: 20px;
 }
@@ -19,6 +20,10 @@ h1 {
     background-color: rgb(18, 90, 90);
     color: white;
 }
-#btnDiv {
-    float: right; 
+table {
+    table-layout: fixed;
+    width: 100%;   
+}
+td {
+    word-wrap:break-word;
 }
